--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             display: flex;
             flex-direction: column;
         }
+        .color {
+            background-color: black;
+        }
     </style>
 </head>
 <body>
