--- a/index.html
+++ b/index.html
@@ -5,26 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js" defer></script>
-    <style>
-        .flexContainer {
-            display: flex;
-            flex: 1 1 auto;
-        }
-        .cell {
-            border: 1px solid black;
-            flex: 1;
-        }
-        #container {
-            margin: auto;
-            height: 500px;
-            width: 500px;
-            display: flex;
-            flex-direction: column;
-        }
-        .color {
-            background-color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="container"></div>
