--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <button>Change Grid Size</button><br><br>
     <div id="container"></div>
 </body>
 </html>
